fix bug with li on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ header li
 {
   float:left;
   display:inline;
-  padding:0 10px;
+  padding:0 15px;
 }
 
 header a
@@ -193,6 +193,7 @@ footer
     float:none;
     text-align:center;
     width:100%;
+    overflow:hidden;
   }
 
   header
